<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:padding="10dp"
                android:background="@color/white"
    >

    <TextView
        android:id="@+id/tv_themename_grammar_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subjectName"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/et_themename_grammar_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_themename_grammar_txt"
        android:layout_toRightOf="@+id/tv_themename_grammar_txt"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/tv_gradecontainer_grammar_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_themename_grammar_item"
        android:layout_marginTop="10dp"
        android:text="@string/chooseGradeName"
        android:textSize="16sp"
        />

    <Spinner
        android:id="@+id/spinner_gradecontainer_grammra_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_themename_grammar_item"
        android:layout_toRightOf="@+id/tv_gradecontainer_grammar_txt"
        >
    </Spinner>

    <TextView
        android:id="@+id/tv_subjectcontainer_grammar_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_gradecontainer_grammar_txt"
        android:layout_marginTop="10dp"
        android:text="@string/chooseSubjectName"
        android:textSize="16sp"
        />

    <Spinner
        android:id="@+id/spinner_subjectcontainer_grammra_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_gradecontainer_grammar_txt"
        android:layout_toRightOf="@+id/tv_subjectcontainer_grammar_txt2"

        >


    </Spinner>

    <TextView
        android:id="@+id/tv_textbookcontainer_grammar_txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_subjectcontainer_grammar_txt2"
        android:layout_marginTop="10dp"
        android:text="@string/chooseTextBook"
        android:textSize="16sp"
        />

    <RadioGroup
        android:id="@+id/radio_textbookcontainer_grammra_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_subjectcontainer_grammar_txt2"
        android:layout_toRightOf="@+id/tv_textbookcontainer_grammar_txt3"
        android:orientation="horizontal"

        >


        <RadioButton

            android:id="@+id/btn_first_volume_grammar_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="上册"
            />

        <RadioButton
            android:id="@+id/btn_down_volume_grammar_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="下册"
            />
    </RadioGroup>


    <TextView
        android:id="@+id/tv_fileuplode_grammar_text_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_textbookcontainer_grammar_txt3"
        android:layout_marginTop="10dp"
        android:text="@string/fileUplode"
        android:textSize="16sp"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btn_choosefile_grammar_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_textbookcontainer_grammar_txt3"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/tv_fileuplode_grammar_text_item"
        android:text="@string/chooseFile"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/tv_choosefile_name_grammar_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_choosefile_grammar_item"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="文件路径"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/tv_progresspercent_grammar_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/tv_choosefile_name_grammar_item"
        android:text="进度"
        android:layout_marginBottom="10dp"
        />

    <com.rey.material.widget.ProgressView
        android:id="@+id/pv_progress_grammmar_item"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_alignBaseline="@+id/tv_progresspercent_grammar_item"
        android:layout_below="@+id/tv_choosefile_name_grammar_item"
        android:layout_toRightOf="@+id/tv_progresspercent_grammar_item"
        android:layout_marginLeft="5dp"
        app:pv_autostart="false"
        app:pv_circular="false"
        app:pv_progressMode="determinate"
        app:pv_progressStyle="@style/LightDeterminateLinearProgressDrawable"
        />


    <Button
        android:id="@+id/btn_savefile_grammar_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_progresspercent_grammar_item"
        android:text="保存"
        />


    <Button
        android:id="@+id/btn_submmitfile_grammar_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_progresspercent_grammar_item"
        android:layout_toRightOf="@+id/btn_savefile_grammar_item"
        android:text="提交"
        />

    <Button
        android:id="@+id/btn_cancel_grammar_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_progresspercent_grammar_item"
        android:layout_toRightOf="@+id/btn_submmitfile_grammar_item"
        android:text="取消"
        />
</RelativeLayout>